# raycaster

./: .gitignore  CMakeLists.txt  LICENSE
src/: archive.c  cast.c  cast.h  draw.h  gamestate.c  gamestate.h  main.c  main.h  player.c  player.h
src/objects/: player.h
src/render/: cast.h  draw.h
